Edited wiki page through web user interface.

--- a/wiki/PropuestasAndroid.wiki
+++ b/wiki/PropuestasAndroid.wiki
@@ -4,6 +4,17 @@
 
 = Propuestas =
 
+== Semana 03Dic-10Dic 09 ==
+
+   * Themes & Style
+   * Repositorio
+   * Animaciones 
+   * Prototipo loader terminado unido al repo ..
+
+----
+
+== Semana 26Nov-03Dic 09 ==
+
     * Portar loader del engine de e-adventure a Android . Se podra elegir de una lista (GameLauncher) de juegos disponibles y que parse y genere el modelo.
 
     * Gestor de animaciones . Basado en el motor de e-adventure , relizar un gestor de animaciones para nuestro motor en Android .
@@ -19,3 +30,5 @@
     * Realizar un prototipo del HUD . 
 
     * Prototipo de diseño de main loop del juego y estados del juego .
+
+----
