Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -8,6 +8,8 @@
       * EnlacesInteresAndroid
       * TerminalesAndroid
       * [http://developer.android.com/guide/appendix/glossary.html GlosarioAndroid] 
+      * Estudios de la plataforma
+          * ImagenesAndroid
       * Prototipos
           * PrototipoLoaderAndroid
     * E-Adventure
