--- a/wiki/RepartoTareas.wiki
+++ b/wiki/RepartoTareas.wiki
@@ -14,6 +14,7 @@ Para la semana que viene:
 
 === Todos ===
  * Proponer nuevo día/hora reunión semanal
+ * Mirar/Documentar temas de diseño del motor de juegos
 
 === Juanma ===
  * Seguir con los prototipos de imágenes, animaciones
