Edited wiki page through web user interface.

--- a/wiki/BarraNavegacion.wiki
+++ b/wiki/BarraNavegacion.wiki
@@ -10,6 +10,7 @@
       * [http://developer.android.com/guide/appendix/glossary.html GlosarioAndroid] 
       * Estudios de la plataforma
           * ImagenesAndroid
+          * InteraccionJuegosAndroid
       * Prototipos
           * PrototipoLoaderAndroid
     * E-Adventure
